force-app/main/default/objects/Inbound_Message__e/Inbound_Message__e.object-meta.xml
<CustomObject>
    <description>Used to process inbound work from external systems  created by Inbound Event Service</description>
    <label>Inbound Message</label>
    <pluralLabel>Inbound Messages</pluralLabel>
</CustomObject>