force-app/main/default/objects/Inbound_Message__e/fields/Dropbox_Path__c.field-meta.xml
<CustomField>
    <fullName>Dropbox_Path__c</fullName>
    <description>Used to transmit the Dropbox path to an object</description>
    <label>Dropbox Path</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>