force-app/main/default/objects/Inbound_Message__e/fields/First_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Date__c</fullName>
    <description>Used to store the first payment date</description>
    <label>First Payment Date</label>
    <type>Date</type>
</CustomField>