force-app/main/default/objects/Inbound_Message__e/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <description>Used to store an Opportunity Id</description>
    <label>Opportunity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>