force-app/main/default/objects/Inbound_Message__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of event that has been fired</description>
    <label>Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>